--- a/mathe/rundungs-trainer.html
+++ b/mathe/rundungs-trainer.html
@@ -932,7 +932,7 @@
         </div>
 
         <div class="input-area">
-            <input type="text" class="answer-input" id="practice-answer" placeholder="?" autocomplete="off">
+            <input type="text" class="answer-input" id="practice-answer" placeholder="?" autocomplete="off" inputmode="decimal">
             <button class="check-btn" id="practice-check-btn">Prüfen</button>
         </div>
 
