--- a/mathe/rundungs-trainer.html
+++ b/mathe/rundungs-trainer.html
@@ -745,6 +745,7 @@
                         <div class="theory-digit" data-idx="4">2</div>
                         <div class="theory-digit" data-idx="5">7</div>
                         <div class="theory-digit" data-idx="6">4</div>
+                        <div class="theory-digit" data-idx="7">5</div>
                     </div>
                     <div class="theory-labels" id="theory-interactive-labels">
                         <div class="theory-label">Hunderter</div>
@@ -754,6 +755,7 @@
                         <div class="theory-label">Zehntel</div>
                         <div class="theory-label">Hundert-<br>stel</div>
                         <div class="theory-label">Tausend-<br>stel</div>
+                        <div class="theory-label">Zehn-<br>tausendstel</div>
                     </div>
                     
                     <div class="theory-checkboxes">
