--- a/nt/schallausbreitung.html
+++ b/nt/schallausbreitung.html
@@ -306,26 +306,7 @@
         
         const receivers = {
             neutral: `
-                <svg viewBox="0 0 60 200">
-                    <!-- Ohrmuschel aussen -->
-                    <path d="M 32 25
-                             C 55 25, 58 60, 55 100
-                             C 52 140, 48 165, 35 175
-                             C 22 185, 18 175, 22 162
-                             C 26 152, 35 145, 38 125
-                             C 41 105, 40 75, 36 55
-                             C 32 35, 28 28, 32 25" 
-                          fill="#f5f5f5" stroke="#888" stroke-width="2"/>
-                    <!-- Innere Falte (Antihelix) -->
-                    <path d="M 34 45
-                             C 45 55, 46 80, 44 105
-                             C 42 130, 36 145, 30 140" 
-                          fill="none" stroke="#aaa" stroke-width="2"/>
-                    <!-- Ohrläppchen -->
-                    <ellipse cx="28" cy="168" rx="8" ry="10" fill="#f5f5f5" stroke="#888" stroke-width="1.5"/>
-                    <!-- Gehörgang -->
-                    <ellipse cx="30" cy="100" rx="7" ry="14" fill="#e0e0e0" stroke="#999" stroke-width="1.5"/>
-                </svg>
+                <div style="font-size: 120px; line-height: 1; display: flex; align-items: center; justify-content: center; height: 100%;">👂</div>
             `,
             fest: `
                 <svg viewBox="0 0 60 200">
